@@ -2,14 +2,21 @@ package org.burgas.ticketservice.service;
 
 import org.burgas.ticketservice.dto.PlaneRequest;
 import org.burgas.ticketservice.dto.PlaneResponse;
+import org.burgas.ticketservice.exception.PlaneNotCreateException;
+import org.burgas.ticketservice.log.PlaneLogs;
 import org.burgas.ticketservice.mapper.PlaneMapper;
 import org.burgas.ticketservice.repository.PlaneRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
+import static java.util.Optional.of;
+import static org.burgas.ticketservice.log.PlaneLogs.PLANE_FOUND_ALL;
+import static org.burgas.ticketservice.message.PlaneMessages.PLANE_NOT_CREATED;
 import static org.springframework.transaction.annotation.Isolation.SERIALIZABLE;
 import static org.springframework.transaction.annotation.Propagation.REQUIRED;
 import static org.springframework.transaction.annotation.Propagation.SUPPORTS;
@@ -18,6 +25,7 @@ import static org.springframework.transaction.annotation.Propagation.SUPPORTS;
 @Transactional(readOnly = true, propagation = SUPPORTS)
 public class PlaneService {
 
+    private static final Logger log = LoggerFactory.getLogger(PlaneService.class);
     private final PlaneRepository planeRepository;
     private final PlaneMapper planeMapper;
 
@@ -29,20 +37,25 @@ public class PlaneService {
     public List<PlaneResponse> findAll() {
         return this.planeRepository.findAll()
                 .stream()
+                .peek(plane -> log.info(PLANE_FOUND_ALL.getLogMessage(), plane))
                 .map(this.planeMapper::toPlaneResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<PlaneResponse> findAllByFree(final String free) {
         return this.planeRepository.findPlanesByFree(Boolean.parseBoolean(free))
                 .stream()
+                .peek(plane -> log.info(PlaneLogs.PLANE_FOUND_BY_FREE.getLogMessage(), plane))
                 .map(this.planeMapper::toPlaneResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public PlaneResponse findById(final String planeId) {
         return this.planeRepository.findById(Long.parseLong(planeId))
+                .stream()
+                .peek(plane -> log.info(PlaneLogs.PLANE_FOUND_BY_ID.getLogMessage(), plane))
                 .map(this.planeMapper::toPlaneResponse)
+                .findFirst()
                 .orElseGet(PlaneResponse::new);
     }
 
@@ -51,9 +64,11 @@ public class PlaneService {
             rollbackFor = Exception.class
     )
     public PlaneResponse createOrUpdate(final PlaneRequest planeRequest) {
-        return Optional.of(this.planeMapper.toPlane(planeRequest))
+        return of(this.planeMapper.toPlane(planeRequest))
                 .map(this.planeRepository::save)
                 .map(this.planeMapper::toPlaneResponse)
-                .orElseGet(PlaneResponse::new);
+                .orElseThrow(
+                        () -> new PlaneNotCreateException(PLANE_NOT_CREATED.getMessage())
+                );
     }
 }
