@@ -2,15 +2,21 @@ package org.burgas.ticketservice.service;
 
 import org.burgas.ticketservice.dto.RequireRequest;
 import org.burgas.ticketservice.dto.RequireResponse;
+import org.burgas.ticketservice.exception.RequireNotCreatedException;
 import org.burgas.ticketservice.kafka.KafkaProducer;
+import org.burgas.ticketservice.log.RequireLogs;
 import org.burgas.ticketservice.mapper.RequireMapper;
+import org.burgas.ticketservice.message.RequireMessages;
 import org.burgas.ticketservice.repository.RequireRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
+import static java.util.Optional.of;
 import static org.springframework.transaction.annotation.Isolation.SERIALIZABLE;
 import static org.springframework.transaction.annotation.Propagation.REQUIRED;
 import static org.springframework.transaction.annotation.Propagation.SUPPORTS;
@@ -19,6 +25,7 @@ import static org.springframework.transaction.annotation.Propagation.SUPPORTS;
 @Transactional(readOnly = true, propagation = SUPPORTS)
 public class RequireService {
 
+    private static final Logger log = LoggerFactory.getLogger(RequireService.class);
     private final RequireRepository requireRepository;
     private final RequireMapper requireMapper;
     private final KafkaProducer kafkaProducer;
@@ -32,13 +39,17 @@ public class RequireService {
     public List<RequireResponse> findAllByClosed(final String closed) {
         return this.requireRepository.findRequiresByClosed(Boolean.parseBoolean(closed))
                 .stream()
+                .peek(require -> log.info(RequireLogs.REQUIRE_FOUND_ALL_BY_CLOSED.getLogMessage(), require))
                 .map(this.requireMapper::toRequireResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public RequireResponse findById(final String requireId) {
         return this.requireRepository.findById(Long.valueOf(requireId))
+                .stream()
+                .peek(require -> log.info(RequireLogs.REQUIRE_FOUND_BY_ID.getLogMessage(), require))
                 .map(this.requireMapper::toRequireResponse)
+                .findFirst()
                 .orElseGet(RequireResponse::new);
     }
 
@@ -47,7 +58,7 @@ public class RequireService {
             rollbackFor = Exception.class
     )
     public RequireResponse createOrUpdate(final RequireRequest requireRequest) {
-        return Optional.of(this.requireMapper.toRequire(requireRequest))
+        return of(this.requireMapper.toRequire(requireRequest))
                 .map(this.requireRepository::save)
                 .map(this.requireMapper::toRequireResponse)
                 .map(
@@ -56,6 +67,8 @@ public class RequireService {
                             return requireResponse;
                         }
                 )
-                .orElseThrow();
+                .orElseThrow(
+                        () -> new RequireNotCreatedException(RequireMessages.REQUIRE_NOT_CREATED.getMessage())
+                );
     }
 }
