@@ -2,14 +2,21 @@ package org.burgas.ticketservice.service;
 
 import org.burgas.ticketservice.dto.TicketRequest;
 import org.burgas.ticketservice.dto.TicketResponse;
+import org.burgas.ticketservice.exception.TicketNotCreatedException;
+import org.burgas.ticketservice.log.TicketLogs;
 import org.burgas.ticketservice.mapper.TicketMapper;
+import org.burgas.ticketservice.message.TicketMessages;
 import org.burgas.ticketservice.repository.TicketRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
+import static java.util.Optional.of;
+import static org.burgas.ticketservice.log.TicketLogs.TICKET_FOUND_ALL;
 import static org.springframework.transaction.annotation.Isolation.SERIALIZABLE;
 import static org.springframework.transaction.annotation.Propagation.REQUIRED;
 import static org.springframework.transaction.annotation.Propagation.SUPPORTS;
@@ -18,6 +25,7 @@ import static org.springframework.transaction.annotation.Propagation.SUPPORTS;
 @Transactional(readOnly = true, propagation = SUPPORTS)
 public class TicketService {
 
+    private static final Logger log = LoggerFactory.getLogger(TicketService.class);
     private final TicketRepository ticketRepository;
     private final TicketMapper ticketMapper;
 
@@ -29,13 +37,25 @@ public class TicketService {
     public List<TicketResponse> findAll() {
         return this.ticketRepository.findAll()
                 .stream()
+                .peek(ticket -> log.info(TICKET_FOUND_ALL.getLogMessage(), ticket))
                 .map(this.ticketMapper::toTicketResponse)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    public List<TicketResponse> findAllByFlightId(final String flightId) {
+        return this.ticketRepository.findTicketsByFlightId(Long.parseLong(flightId))
+                .stream()
+                .peek(ticket -> log.info(TicketLogs.TICKET_FOUND_BY_FLIGHT_ID.getLogMessage(), ticket))
+                .map(this.ticketMapper::toTicketResponse)
+                .collect(Collectors.toList());
     }
 
     public TicketResponse findById(final String ticketId) {
         return this.ticketRepository.findById(Long.parseLong(ticketId))
+                .stream()
+                .peek(ticket -> log.info(TicketLogs.TICKET_WAS_FOUND_BY_ID.getLogMessage(), ticket))
                 .map(this.ticketMapper::toTicketResponse)
+                .findFirst()
                 .orElseGet(TicketResponse::new);
     }
 
@@ -44,9 +64,11 @@ public class TicketService {
             rollbackFor = Exception.class
     )
     public TicketResponse createOrUpdate(final TicketRequest ticketRequest) {
-        return Optional.of(this.ticketMapper.toTicket(ticketRequest))
+        return of(this.ticketMapper.toTicket(ticketRequest))
                 .map(this.ticketRepository::save)
                 .map(this.ticketMapper::toTicketResponse)
-                .orElseGet(TicketResponse::new);
+                .orElseThrow(
+                        () -> new TicketNotCreatedException(TicketMessages.TICKET_NOT_CREATED.getMessage())
+                );
     }
 }
